# standards-registry

./: .gitignore  README.md  bibliography.md  pyproject.toml  registry.yaml  standards_registry.py
data/: 20251030_school_boards.json  school_boards_with_acronyms.json
data-standards/: 20251030_public_health_units.yaml
tools/: derive_school_board_acronym.py
