[project]
name = "standards-registry"
version = "0.1.0"
description = "Version-controlled registry of standards for WDGPH automation and data engineering projects"
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "gradio>=5.0.0",
    "pyyaml>=6.0",
    "watchdog>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["standards_registry.py"]

 